Subo archivo a github. Machado - Gonzalez

--- a/notebooks/project.ipynb
+++ b/notebooks/project.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-07T02:13:41.647871Z",
-     "start_time": "2025-09-07T02:13:41.634141Z"
+     "end_time": "2025-09-16T20:26:52.070184Z",
+     "start_time": "2025-09-16T20:26:52.067942Z"
     }
    },
    "source": [
@@ -21,90 +21,572 @@
     "from dotenv import load_dotenv"
    ],
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "c6f88cc75ad4e2c8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "8f8b9cb5e9c2417f"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T02:13:51.276823Z",
-     "start_time": "2025-09-07T02:13:51.267956Z"
+     "end_time": "2025-09-16T20:38:09.247934Z",
+     "start_time": "2025-09-16T20:38:09.243748Z"
     }
    },
    "cell_type": "code",
    "source": [
     "load_dotenv()\n",
     "client_id = os.getenv(\"CLIENT_ID\")\n",
-    "client_secret = os.getenv('CLIENT_SECRET')\n",
-    "saludo = os.getenv('HOLA')\n",
-    "\n",
-    "print(saludo)"
+    "client_secret = os.getenv('CLIENT_SECRET')\n"
    ],
    "id": "9dbdff5e6cd941d1",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hola\n"
-     ]
-    }
-   ],
-   "execution_count": 12
+   "outputs": [],
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T03:21:04.709379Z",
-     "start_time": "2025-09-07T03:21:04.699730Z"
+     "end_time": "2025-09-16T20:38:17.542674Z",
+     "start_time": "2025-09-16T20:38:17.539264Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "data = [\n",
-    "    (0,'Nos Siguen Pegando Abajo',67,206720),\n",
-    "(1,'Demoliendo Hoteles',66,135973),\n",
-    "(2,'No Voy en Tren',63,181600),\n",
-    "(3,'Promesas Sobre El Bidet',64,164360),\n",
-    "(4,'Hablando a Tu Corazón',63,255266),\n",
-    "(5,'No Me Dejan Salir',62,263200),\n",
-    "(6,'Raros Peinados Nuevos',60,214760),\n",
-    "(7,'Tu Amor',60,186466),\n",
-    "(8,'Rezo por Vos',59,269053),\n",
-    "(9,'Los Dinosaurios',57,208093)\n",
-    "]\n",
+    "import spotipy\n",
+    "from spotipy.oauth2 import SpotifyClientCredentials\n",
     "\n",
-    "songs = []\n",
-    "for song in data:\n",
-    "    song_dict = {'canción': song[1], 'popularidad': song[2], 'duración': song[3]}\n",
-    "    songs.append(song_dict)\n",
-    "\n",
-    "songs"
+    "auth_manager = SpotifyClientCredentials(client_id=client_id, client_secret=client_secret)\n",
+    "spotify = spotipy.Spotify(auth_manager=auth_manager)"
    ],
-   "id": "ef587075f068df4e",
+   "id": "ba3f9219d04f5b5c",
+   "outputs": [],
+   "execution_count": 15
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "9f147ed586388e90"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-16T20:50:06.021858Z",
+     "start_time": "2025-09-16T20:50:05.666054Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "artist_id = \"22wbnEMDvgVIAGdFeek6ET\"\n",
+    "\n",
+    "\n",
+    "benson= 'spotify:artist:' + artist_id\n",
+    "results = spotify.artist_top_tracks(benson)\n",
+    "results[\"tracks\"][0]"
+   ],
+   "id": "1221ba3981e9e2b0",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'canción': 'Nos Siguen Pegando Abajo',\n",
-       "  'popularidad': 67,\n",
-       "  'duración': 206720},\n",
-       " {'canción': 'Demoliendo Hoteles', 'popularidad': 66, 'duración': 135973},\n",
-       " {'canción': 'No Voy en Tren', 'popularidad': 63, 'duración': 181600},\n",
-       " {'canción': 'Promesas Sobre El Bidet', 'popularidad': 64, 'duración': 164360},\n",
-       " {'canción': 'Hablando a Tu Corazón', 'popularidad': 63, 'duración': 255266},\n",
-       " {'canción': 'No Me Dejan Salir', 'popularidad': 62, 'duración': 263200},\n",
-       " {'canción': 'Raros Peinados Nuevos', 'popularidad': 60, 'duración': 214760},\n",
-       " {'canción': 'Tu Amor', 'popularidad': 60, 'duración': 186466},\n",
-       " {'canción': 'Rezo por Vos', 'popularidad': 59, 'duración': 269053},\n",
-       " {'canción': 'Los Dinosaurios', 'popularidad': 57, 'duración': 208093}]"
+       "{'album': {'album_type': 'album',\n",
+       "  'artists': [{'external_urls': {'spotify': 'https://open.spotify.com/artist/22wbnEMDvgVIAGdFeek6ET'},\n",
+       "    'href': 'https://api.spotify.com/v1/artists/22wbnEMDvgVIAGdFeek6ET',\n",
+       "    'id': '22wbnEMDvgVIAGdFeek6ET',\n",
+       "    'name': 'Benson Boone',\n",
+       "    'type': 'artist',\n",
+       "    'uri': 'spotify:artist:22wbnEMDvgVIAGdFeek6ET'}],\n",
+       "  'available_markets': ['AR',\n",
+       "   'AU',\n",
+       "   'AT',\n",
+       "   'BE',\n",
+       "   'BO',\n",
+       "   'BR',\n",
+       "   'BG',\n",
+       "   'CA',\n",
+       "   'CL',\n",
+       "   'CO',\n",
+       "   'CR',\n",
+       "   'CY',\n",
+       "   'CZ',\n",
+       "   'DK',\n",
+       "   'DO',\n",
+       "   'DE',\n",
+       "   'EC',\n",
+       "   'EE',\n",
+       "   'SV',\n",
+       "   'FI',\n",
+       "   'FR',\n",
+       "   'GR',\n",
+       "   'GT',\n",
+       "   'HN',\n",
+       "   'HK',\n",
+       "   'HU',\n",
+       "   'IS',\n",
+       "   'IE',\n",
+       "   'IT',\n",
+       "   'LV',\n",
+       "   'LT',\n",
+       "   'LU',\n",
+       "   'MY',\n",
+       "   'MT',\n",
+       "   'MX',\n",
+       "   'NL',\n",
+       "   'NZ',\n",
+       "   'NI',\n",
+       "   'NO',\n",
+       "   'PA',\n",
+       "   'PY',\n",
+       "   'PE',\n",
+       "   'PH',\n",
+       "   'PL',\n",
+       "   'PT',\n",
+       "   'SG',\n",
+       "   'SK',\n",
+       "   'ES',\n",
+       "   'SE',\n",
+       "   'CH',\n",
+       "   'TW',\n",
+       "   'TR',\n",
+       "   'UY',\n",
+       "   'US',\n",
+       "   'GB',\n",
+       "   'AD',\n",
+       "   'LI',\n",
+       "   'MC',\n",
+       "   'ID',\n",
+       "   'JP',\n",
+       "   'TH',\n",
+       "   'VN',\n",
+       "   'RO',\n",
+       "   'IL',\n",
+       "   'ZA',\n",
+       "   'SA',\n",
+       "   'AE',\n",
+       "   'BH',\n",
+       "   'QA',\n",
+       "   'OM',\n",
+       "   'KW',\n",
+       "   'EG',\n",
+       "   'MA',\n",
+       "   'DZ',\n",
+       "   'TN',\n",
+       "   'LB',\n",
+       "   'JO',\n",
+       "   'PS',\n",
+       "   'IN',\n",
+       "   'KZ',\n",
+       "   'MD',\n",
+       "   'UA',\n",
+       "   'AL',\n",
+       "   'BA',\n",
+       "   'HR',\n",
+       "   'ME',\n",
+       "   'MK',\n",
+       "   'RS',\n",
+       "   'SI',\n",
+       "   'KR',\n",
+       "   'BD',\n",
+       "   'PK',\n",
+       "   'LK',\n",
+       "   'GH',\n",
+       "   'KE',\n",
+       "   'NG',\n",
+       "   'TZ',\n",
+       "   'UG',\n",
+       "   'AG',\n",
+       "   'AM',\n",
+       "   'BS',\n",
+       "   'BB',\n",
+       "   'BZ',\n",
+       "   'BT',\n",
+       "   'BW',\n",
+       "   'BF',\n",
+       "   'CV',\n",
+       "   'CW',\n",
+       "   'DM',\n",
+       "   'FJ',\n",
+       "   'GM',\n",
+       "   'GE',\n",
+       "   'GD',\n",
+       "   'GW',\n",
+       "   'GY',\n",
+       "   'HT',\n",
+       "   'JM',\n",
+       "   'KI',\n",
+       "   'LS',\n",
+       "   'LR',\n",
+       "   'MW',\n",
+       "   'MV',\n",
+       "   'ML',\n",
+       "   'MH',\n",
+       "   'FM',\n",
+       "   'NA',\n",
+       "   'NR',\n",
+       "   'NE',\n",
+       "   'PW',\n",
+       "   'PG',\n",
+       "   'PR',\n",
+       "   'WS',\n",
+       "   'SM',\n",
+       "   'ST',\n",
+       "   'SN',\n",
+       "   'SC',\n",
+       "   'SL',\n",
+       "   'SB',\n",
+       "   'KN',\n",
+       "   'LC',\n",
+       "   'VC',\n",
+       "   'SR',\n",
+       "   'TL',\n",
+       "   'TO',\n",
+       "   'TT',\n",
+       "   'TV',\n",
+       "   'VU',\n",
+       "   'AZ',\n",
+       "   'BN',\n",
+       "   'BI',\n",
+       "   'KH',\n",
+       "   'CM',\n",
+       "   'TD',\n",
+       "   'KM',\n",
+       "   'GQ',\n",
+       "   'SZ',\n",
+       "   'GA',\n",
+       "   'GN',\n",
+       "   'KG',\n",
+       "   'LA',\n",
+       "   'MO',\n",
+       "   'MR',\n",
+       "   'MN',\n",
+       "   'NP',\n",
+       "   'RW',\n",
+       "   'TG',\n",
+       "   'UZ',\n",
+       "   'ZW',\n",
+       "   'BJ',\n",
+       "   'MG',\n",
+       "   'MU',\n",
+       "   'MZ',\n",
+       "   'AO',\n",
+       "   'CI',\n",
+       "   'DJ',\n",
+       "   'ZM',\n",
+       "   'CD',\n",
+       "   'CG',\n",
+       "   'IQ',\n",
+       "   'LY',\n",
+       "   'TJ',\n",
+       "   'VE',\n",
+       "   'ET',\n",
+       "   'XK'],\n",
+       "  'external_urls': {'spotify': 'https://open.spotify.com/album/168CdR21lfn0TTyw1Pkdcm'},\n",
+       "  'href': 'https://api.spotify.com/v1/albums/168CdR21lfn0TTyw1Pkdcm',\n",
+       "  'id': '168CdR21lfn0TTyw1Pkdcm',\n",
+       "  'images': [{'url': 'https://i.scdn.co/image/ab67616d0000b273cc04ff3e70e146ba9abacf40',\n",
+       "    'height': 640,\n",
+       "    'width': 640},\n",
+       "   {'url': 'https://i.scdn.co/image/ab67616d00001e02cc04ff3e70e146ba9abacf40',\n",
+       "    'height': 300,\n",
+       "    'width': 300},\n",
+       "   {'url': 'https://i.scdn.co/image/ab67616d00004851cc04ff3e70e146ba9abacf40',\n",
+       "    'height': 64,\n",
+       "    'width': 64}],\n",
+       "  'is_playable': True,\n",
+       "  'name': 'Fireworks & Rollerblades',\n",
+       "  'release_date': '2024-04-05',\n",
+       "  'release_date_precision': 'day',\n",
+       "  'total_tracks': 15,\n",
+       "  'type': 'album',\n",
+       "  'uri': 'spotify:album:168CdR21lfn0TTyw1Pkdcm'},\n",
+       " 'artists': [{'external_urls': {'spotify': 'https://open.spotify.com/artist/22wbnEMDvgVIAGdFeek6ET'},\n",
+       "   'href': 'https://api.spotify.com/v1/artists/22wbnEMDvgVIAGdFeek6ET',\n",
+       "   'id': '22wbnEMDvgVIAGdFeek6ET',\n",
+       "   'name': 'Benson Boone',\n",
+       "   'type': 'artist',\n",
+       "   'uri': 'spotify:artist:22wbnEMDvgVIAGdFeek6ET'}],\n",
+       " 'available_markets': ['AR',\n",
+       "  'AU',\n",
+       "  'AT',\n",
+       "  'BE',\n",
+       "  'BO',\n",
+       "  'BR',\n",
+       "  'BG',\n",
+       "  'CA',\n",
+       "  'CL',\n",
+       "  'CO',\n",
+       "  'CR',\n",
+       "  'CY',\n",
+       "  'CZ',\n",
+       "  'DK',\n",
+       "  'DO',\n",
+       "  'DE',\n",
+       "  'EC',\n",
+       "  'EE',\n",
+       "  'SV',\n",
+       "  'FI',\n",
+       "  'FR',\n",
+       "  'GR',\n",
+       "  'GT',\n",
+       "  'HN',\n",
+       "  'HK',\n",
+       "  'HU',\n",
+       "  'IS',\n",
+       "  'IE',\n",
+       "  'IT',\n",
+       "  'LV',\n",
+       "  'LT',\n",
+       "  'LU',\n",
+       "  'MY',\n",
+       "  'MT',\n",
+       "  'MX',\n",
+       "  'NL',\n",
+       "  'NZ',\n",
+       "  'NI',\n",
+       "  'NO',\n",
+       "  'PA',\n",
+       "  'PY',\n",
+       "  'PE',\n",
+       "  'PH',\n",
+       "  'PL',\n",
+       "  'PT',\n",
+       "  'SG',\n",
+       "  'SK',\n",
+       "  'ES',\n",
+       "  'SE',\n",
+       "  'CH',\n",
+       "  'TW',\n",
+       "  'TR',\n",
+       "  'UY',\n",
+       "  'US',\n",
+       "  'GB',\n",
+       "  'AD',\n",
+       "  'LI',\n",
+       "  'MC',\n",
+       "  'ID',\n",
+       "  'JP',\n",
+       "  'TH',\n",
+       "  'VN',\n",
+       "  'RO',\n",
+       "  'IL',\n",
+       "  'ZA',\n",
+       "  'SA',\n",
+       "  'AE',\n",
+       "  'BH',\n",
+       "  'QA',\n",
+       "  'OM',\n",
+       "  'KW',\n",
+       "  'EG',\n",
+       "  'MA',\n",
+       "  'DZ',\n",
+       "  'TN',\n",
+       "  'LB',\n",
+       "  'JO',\n",
+       "  'PS',\n",
+       "  'IN',\n",
+       "  'KZ',\n",
+       "  'MD',\n",
+       "  'UA',\n",
+       "  'AL',\n",
+       "  'BA',\n",
+       "  'HR',\n",
+       "  'ME',\n",
+       "  'MK',\n",
+       "  'RS',\n",
+       "  'SI',\n",
+       "  'KR',\n",
+       "  'BD',\n",
+       "  'PK',\n",
+       "  'LK',\n",
+       "  'GH',\n",
+       "  'KE',\n",
+       "  'NG',\n",
+       "  'TZ',\n",
+       "  'UG',\n",
+       "  'AG',\n",
+       "  'AM',\n",
+       "  'BS',\n",
+       "  'BB',\n",
+       "  'BZ',\n",
+       "  'BT',\n",
+       "  'BW',\n",
+       "  'BF',\n",
+       "  'CV',\n",
+       "  'CW',\n",
+       "  'DM',\n",
+       "  'FJ',\n",
+       "  'GM',\n",
+       "  'GE',\n",
+       "  'GD',\n",
+       "  'GW',\n",
+       "  'GY',\n",
+       "  'HT',\n",
+       "  'JM',\n",
+       "  'KI',\n",
+       "  'LS',\n",
+       "  'LR',\n",
+       "  'MW',\n",
+       "  'MV',\n",
+       "  'ML',\n",
+       "  'MH',\n",
+       "  'FM',\n",
+       "  'NA',\n",
+       "  'NR',\n",
+       "  'NE',\n",
+       "  'PW',\n",
+       "  'PG',\n",
+       "  'PR',\n",
+       "  'WS',\n",
+       "  'SM',\n",
+       "  'ST',\n",
+       "  'SN',\n",
+       "  'SC',\n",
+       "  'SL',\n",
+       "  'SB',\n",
+       "  'KN',\n",
+       "  'LC',\n",
+       "  'VC',\n",
+       "  'SR',\n",
+       "  'TL',\n",
+       "  'TO',\n",
+       "  'TT',\n",
+       "  'TV',\n",
+       "  'VU',\n",
+       "  'AZ',\n",
+       "  'BN',\n",
+       "  'BI',\n",
+       "  'KH',\n",
+       "  'CM',\n",
+       "  'TD',\n",
+       "  'KM',\n",
+       "  'GQ',\n",
+       "  'SZ',\n",
+       "  'GA',\n",
+       "  'GN',\n",
+       "  'KG',\n",
+       "  'LA',\n",
+       "  'MO',\n",
+       "  'MR',\n",
+       "  'MN',\n",
+       "  'NP',\n",
+       "  'RW',\n",
+       "  'TG',\n",
+       "  'UZ',\n",
+       "  'ZW',\n",
+       "  'BJ',\n",
+       "  'MG',\n",
+       "  'MU',\n",
+       "  'MZ',\n",
+       "  'AO',\n",
+       "  'CI',\n",
+       "  'DJ',\n",
+       "  'ZM',\n",
+       "  'CD',\n",
+       "  'CG',\n",
+       "  'IQ',\n",
+       "  'LY',\n",
+       "  'TJ',\n",
+       "  'VE',\n",
+       "  'ET',\n",
+       "  'XK'],\n",
+       " 'disc_number': 1,\n",
+       " 'duration_ms': 180304,\n",
+       " 'explicit': False,\n",
+       " 'external_ids': {'isrc': 'USWB12307016'},\n",
+       " 'external_urls': {'spotify': 'https://open.spotify.com/track/3xkHsmpQCBMytMJNiDf3Ii'},\n",
+       " 'href': 'https://api.spotify.com/v1/tracks/3xkHsmpQCBMytMJNiDf3Ii',\n",
+       " 'id': '3xkHsmpQCBMytMJNiDf3Ii',\n",
+       " 'is_local': False,\n",
+       " 'is_playable': True,\n",
+       " 'name': 'Beautiful Things',\n",
+       " 'popularity': 89,\n",
+       " 'preview_url': None,\n",
+       " 'track_number': 4,\n",
+       " 'type': 'track',\n",
+       " 'uri': 'spotify:track:3xkHsmpQCBMytMJNiDf3Ii'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 24
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-16T20:50:09.778079Z",
+     "start_time": "2025-09-16T20:50:09.771975Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "results[\"tracks\"][0][\"name\"]\n",
+   "id": "711b19243a2827b1",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Beautiful Things'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-16T20:54:41.479063Z",
+     "start_time": "2025-09-16T20:54:41.473033Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "top_10 = []\n",
+    "\n",
+    "for track in results['tracks'][:10]:\n",
+    "    top_10.append({\"name\": track[\"name\"], \"popularity\": track[\"popularity\"], \"duration\": track[\"duration_ms\"]})\n",
+    "\n",
+    "top_10"
+   ],
+   "id": "eaea212566279b7e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Beautiful Things', 'popularity': 89, 'duration': 180304},\n",
+       " {'name': 'Mystical Magical', 'popularity': 85, 'duration': 165746},\n",
+       " {'name': 'In The Stars', 'popularity': 84, 'duration': 216410},\n",
+       " {'name': \"Sorry I'm Here For Someone Else\",\n",
+       "  'popularity': 83,\n",
+       "  'duration': 156582},\n",
+       " {'name': 'Slow It Down', 'popularity': 84, 'duration': 161831},\n",
+       " {'name': 'Ghost Town', 'popularity': 78, 'duration': 193733},\n",
+       " {'name': 'NIGHTS LIKE THESE', 'popularity': 79, 'duration': 172514},\n",
+       " {'name': 'Pretty Slowly', 'popularity': 77, 'duration': 261420},\n",
+       " {'name': 'Mr Electric Blue', 'popularity': 76, 'duration': 190320},\n",
+       " {'name': 'Cry', 'popularity': 73, 'duration': 186359}]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 30
   }
  ],
  "metadata": {
